--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
     <img src="https://s.isanook.com/cl/0/up/2014/02/164644550-600x399.jpg" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
     <a href="A.html">ข้อมูล A</a>
     <img src="https://s.isanook.com/ho/0/ud/0/2125/b_02865_009.jpg" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
-    <a href="A.html">ข้อมูล A</a>
+    <a href="B.html">ข้อมูล B</a>
 </html>
